# hobbyprojects

./: .env.example  .gitignore  Dockerfile  INSTALL.md  README.md  README_RL_Integration.md  README_V2.md  README_fastapi.md  cli.py  customer_outreach.py  docker-compose.yml  enhanced_customer_outreach.py  enhanced_customer_outreach_v2.py  outreach_app.py  pyproject.toml  requirements.txt  requirements_fastapi.txt  requirements_rl.txt  rl_campaign_agent.py  run.bat  run.sh
.github/workflows/: ci.yml
src/campaign/: config.py  logging.py  main.py  schemas.py
src/campaign/agents/: calendaring_detector.py  draft_refiner.py  draft_reviewer.py  lead_analyzer.py  outreach_drafter.py  reply_classifier.py  reply_workers.py
src/campaign/api/routes/: campaigns.py  dashboard.py  health.py  inbox.py  personas.py  send.py  settings.py
src/campaign/db/: models.py  session.py
src/campaign/services/: anthropic.py  inbox_gateway.py  smtp_sender.py  style_indexer.py
src/campaign/tools/: company_lookup.py
src/campaign/web/: app.js  index.html  styles.css
src/campaign/workers/: prefetch.py
src/campaign/workflow/: draft_graph.py  pipeline.py  reply_graph.py
tests/: conftest.py  test_agents.py  test_anthropic_service.py  test_api.py  test_evals.py  test_inbox.py  test_reply_classifier.py  test_send.py  test_settings_and_style.py  test_workflow_graph.py
tests/evals/: baseline.json  fixtures.json  runner.py
